# website

./: .gitignore  justfile  main.py  mkdocs.yml  properdocs-base.yml  properdocs-timeless.yml  properdocs.yml  pyproject.toml  wrangler.toml
.github/workflows/: website.yml
docs/: index.md  pages.j2
docs/assignments/: environnement.md  mini-projet.md  optimisations.md  pages.j2
docs/assignments/environnement/inc/: boot_cifs.cmd
docs/assignments/programmation-noyau/: modules.md  pages.j2  pilotes.md
docs/assignments/programmation-systeme/: fichiers.md  ordonnanceur.md  pages.j2
docs/lecture/: pages.j2
docs/lecture/environnement/: bootloader.md  debugging.md  dev-env.md  gnu.md  infra-heia.md  pages.j2
docs/lecture/optimisations/: pages.j2
docs/lecture/programmation-noyau/: pages.j2
docs/lecture/programmation-noyau/modules/: bibliotheques.md  concurrent.md  es.md  install.md  malloc.md  module-gen.md  module.md  pages.j2  parameters.md
docs/lecture/programmation-noyau/pilotes/: blocking.md  char.md  pages.j2  sysfs.md
docs/lecture/programmation-systeme/: pages.j2
docs/lecture/programmation-systeme/fichiers/: directories.md  pages.j2  select.md
docs/lecture/programmation-systeme/ordonnanceur/: multi-process.md  pages.j2  scheduler.md  signal.md
docs/organisation/: exam.md  intro.md
overrides/stylesheets/: extra.css
