[project]
name = "csel1-website"
version = "0.1.0"
description = "CSEL1 Web Site"
authors = [{ name = "Jacques Supcik", email = "jacques.supcik@hefr.ch" }]
requires-python = ">=3.10,<4.0"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mkdocs-materialx>=10.1.7",
    "properdocs>=1.6.7",
    "mkdocs-awesome-pages-plugin>=2.10.1,<3",
    "mkdocs-calendar-plugin>=0.4.5,<0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7,<2",
    "mkdocs-glightbox>=0.5.1,<0.6",
    "mkdocs-include-markdown-plugin>=7.2.0,<8",
    "mkdocs-jconfig-plugin>=0.1.3,<0.2",
    "mkdocs-macros-plugin>=1.4.0,<2",
    "mkdocs-mermaid2-plugin>=1.2.2,<2",
    "mkdocs-minify-plugin>=0.8.0,<0.9",
    "mkdocs-pages-j2-plugin>=0.3.1,<0.4",
    "mkdocs-static-i18n>=1.3.0,<2",
    "python-markdown-comments",
    "python-markdown-math>=0.9,<0.10",
    "platformdirs>=4.5.0,<5",
    "mkdocs-open-in-new-tab>=1.0.8,<2",
    "mkdocs-exclude-search>=0.6.6",
]

[tool.uv]
package = false

[tool.uv.sources]
python-markdown-comments = { git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "973fe7b" }

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
